feat: initial POC of v6 traceability testing
Signed-off-by: Dimitar Dinev <mitkojc@gmail.com>